crates/rstest-bdd-macros/tests/ui/outline_empty_examples.rs
use rstest_bdd_macros::scenario;

#[scenario(path = "../../../../crates/rstest-bdd-macros/tests/features/outline_empty_examples.feature")]
fn compile_fail() {}

fn main() {}
